--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,11 @@ env:
     - GIT_AUTHOR_NAME=travis
     - GIT_AUTHOR_EMAIL=travis@example.com
     - secure: "cWwGicBmzR91ptlHWyN5xDTGWhVybSDpnK647gYq/hjKA0/qPJyyfxfjUYt4S3nftREaIUbLNO6IXJqFeuGySouPPOVZu9PO3Xx/Lh3YlSrc84xrzoDrEPGZU8w2rWWRGRjMhoJzTRjue5PmTVntQri99M3CxqKMtw9gf749Y1o="
-before_script:
-    - git clone --quiet https://github.com/soramugi/jr-passenger.git build
-    - pushd build
-    - git checkout -b gh-pages
-    - popd
 script:
-    - bundle exec middleman build
+  - bundle exec middleman build
 after_success:
-    - cd build
-    - git add -A
-    - git commit -m 'Update'
-    - '[ "$TRAVIS_BRANCH" == "master" ] && [ $GH_TOKEN ] && git push --quiet https://$GH_TOKEN@github.com/soramugi/jr-passenger.git gh-pages 2> /dev/null'
+  - cd build
+  - git init
+  - git add --all
+  - git commit -m "Update from Travis CI"
+  - 'git push --quiet https://$GITHUB_TOKEN@github.com/soramugi/jr-passenger.git HEAD:gh-pages -f 2> /dev/null'
